@@ -300,6 +300,12 @@ The data destination type(s) for the study. It could be 'standard', '14mg' or 'g
   is_nullable: 1
   size: 255
 
+=head2 contaminated_human_data_access_group
+
+  data_type: 'varchar'
+  is_nullable: 1
+  size: 255
+
 =cut
 
 __PACKAGE__->add_columns(
@@ -403,6 +409,8 @@ __PACKAGE__->add_columns(
   's3_email_list',
   { data_type => 'varchar', is_nullable => 1, size => 255 },
   'data_deletion_period',
+  { data_type => 'varchar', is_nullable => 1, size => 255 },
+  'contaminated_human_data_access_group',
   { data_type => 'varchar', is_nullable => 1, size => 255 },
 );
 
@@ -572,8 +580,8 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07051 @ 2023-02-23 11:12:46
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:NrXlvzwGR2uLtnN+fJVHvw
+# Created by DBIx::Class::Schema::Loader v0.07052 @ 2024-08-08 13:33:16
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:cSZp6NXki9BI3+HAAlBY9w
 
 with 'WTSI::DNAP::Warehouse::Schema::Query::LimsFlags';
 
